# lobster-lab

./: .gitignore  .spaceignore  DEPLOYMENT.md  README.md  README_HF.md  backtesting.py  backtesting_utils.py  gui_app.py  gui_orderbook.py  lobster_parsing.py  main.py  pyproject.toml  requirements.txt  sync_datasets.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
.streamlit/: config.toml  secrets.toml
docs/: performance_analysis.md
gui_pages/: __init__.py  data.py  l1_page.py  l2_page.py  l3_page.py  shared.py  ui.py  utils.py
