[project]
name = "lobster"
version = "0.1.0"
description = "LOBSTER market data parser and visualizer with backtesting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

[tool.setuptools]
py-modules = ["lobster_parsing", "backtesting", "main", "gui_orderbook"]
