[project]
name = "lobster"
version = "0.1.0"
description = "LOBSTER market data parser and visualizer with backtesting"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "BSD-3-Clause"}
dependencies = [
    "polars>=1.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "huggingface-hub>=0.20.0",
    "bs4>=0.0.2",
    "hf>=0.0.14",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
